fix title wrap

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -108,6 +108,7 @@ body {
         font-size: 2em;
         width: 80%;
         text-overflow: ellipsis;
+        white-space: nowrap;
     }
 
     .description {
